[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/graphics/search_clear_thin_s.png" type="Texture" id=1]
[ext_resource path="res://scripts/tools/query_editor_highlights.gd" type="Script" id=2]
[ext_resource path="res://ui/views/scripts/ui_query.gd" type="Script" id=3]
[ext_resource path="res://ui/elements/scripts/element_generic_button.gd" type="Script" id=4]
[ext_resource path="res://assets/graphics/sci-fi/extra_border_dots.png" type="Texture" id=5]
[ext_resource path="res://ui/elements/Element_GenericButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/themes/default.tres" type="Theme" id=7]
[ext_resource path="res://assets/graphics/sci-fi/extra_border2.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/sci-fi/extra_border.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/sci-fi/xsmall_pixels.png" type="Texture" id=10]
[ext_resource path="res://assets/graphics/sci-fi/icon_dropdown.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.223529, 0.588235, 0.87451, 0.0509804 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="CanvasItemMaterial" id=47]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=48]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=49]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 50.0
margin_top = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=50]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_right = 50.0
margin_bottom = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="CanvasItemMaterial" id=43]
blend_mode = 1

[sub_resource type="DynamicFontData" id=37]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=44]
size = 38
use_mipmaps = true
use_filter = true
extra_spacing_top = -9
extra_spacing_char = 2
font_data = SubResource( 37 )

[sub_resource type="DynamicFontData" id=58]
font_path = "res://assets/fonts/Lato-Regular.ttf"

[sub_resource type="DynamicFont" id=45]
size = 30
font_data = SubResource( 58 )

[sub_resource type="StyleBoxEmpty" id=38]
content_margin_left = 10.0

[sub_resource type="StyleBoxEmpty" id=42]
content_margin_right = 8.0

[sub_resource type="DynamicFontData" id=41]
font_path = "res://assets/fonts/SourceCodePro-Regular.ttf"

[sub_resource type="DynamicFont" id=35]
size = 32
use_mipmaps = true
use_filter = true
font_data = SubResource( 41 )

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0, 0, 0, 0.337255 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=52]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="CanvasItemMaterial" id=53]
blend_mode = 1

[sub_resource type="DynamicFontData" id=54]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=55]
size = 30
use_mipmaps = true
use_filter = true
extra_spacing_top = -5
extra_spacing_char = 2
font_data = SubResource( 54 )

[sub_resource type="StyleBoxFlat" id=56]
bg_color = Color( 1, 0.6, 0.156863, 0.533333 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.4, 0, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=57]
bg_color = Color( 0.223529, 0.588235, 0.87451, 0.0509804 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[node name="UIQueryEngine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_bottom = -896.0
rect_min_size = Vector2( 1920, 0 )
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 80
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="SearchContainer"]
margin_left = 100.0
margin_top = 80.0
margin_right = 1820.0
margin_bottom = 144.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SearchContainer/Background"]
modulate = Color( 0.101961, 0.670588, 1, 0.121569 )
material = SubResource( 47 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra" type="Panel" parent="SearchContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 48 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 49 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra2" type="Panel" parent="SearchContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 48 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 50 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="SearchContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueryLibLabel" type="Label" parent="SearchContainer/Background"]
material = SubResource( 43 )
margin_left = 4.0
margin_top = -40.0
margin_right = 1684.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 55 )
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 44 )
text = "Query Library"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SearchContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueryLabel_Short" type="Label" parent="SearchContainer/Background/HBoxContainer"]
modulate = Color( 0.792157, 0.933333, 1, 1 )
margin_top = 4.0
margin_right = 500.0
margin_bottom = 59.0
rect_min_size = Vector2( 500, 55 )
mouse_filter = 1
custom_fonts/font = SubResource( 45 )
custom_styles/normal = SubResource( 38 )
text = "Short"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueryLabel_Long" type="Label" parent="SearchContainer/Background/HBoxContainer"]
modulate = Color( 0.792157, 0.933333, 1, 1 )
margin_left = 504.0
margin_top = 4.0
margin_right = 1652.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 55 )
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = SubResource( 45 )
text = "Long"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="Button" parent="SearchContainer/Background/HBoxContainer"]
margin_left = 1656.0
margin_right = 1720.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 46 )
custom_styles/pressed = SubResource( 46 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 46 )
icon = ExtResource( 11 )
expand_icon = true

[node name="EditContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 176.0
margin_bottom = -760.0
rect_min_size = Vector2( 1920, 0 )
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 80
custom_constants/margin_left = 140
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="EditContainer"]
margin_left = 140.0
margin_top = 80.0
margin_right = 1820.0
margin_bottom = 144.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="EditContainer/Background"]
modulate = Color( 0.101961, 0.670588, 1, 0.121569 )
material = SubResource( 47 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra" type="Panel" parent="EditContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 48 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 49 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra2" type="Panel" parent="EditContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 48 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 50 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="EditContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParametersLabel" type="Label" parent="EditContainer/Background"]
material = SubResource( 43 )
margin_left = 4.0
margin_top = -40.0
margin_right = 1684.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 55 )
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 44 )
text = "Parameters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EditContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Propertyname" type="Label" parent="EditContainer/Background/HBoxContainer"]
modulate = Color( 0.792157, 0.933333, 1, 1 )
margin_top = 4.0
margin_right = 500.0
margin_bottom = 59.0
rect_min_size = Vector2( 500, 55 )
mouse_filter = 1
custom_fonts/font = SubResource( 45 )
custom_styles/normal = SubResource( 38 )
text = "Short"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="EditContainer/Background/HBoxContainer"]
margin_left = 504.0
margin_right = 1680.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_colors/selection_color = Color( 0.603922, 0.870588, 1, 0.0392157 )
custom_colors/font_color_selected = Color( 0.603922, 0.870588, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 45 )
custom_icons/clear = ExtResource( 1 )
custom_styles/focus = SubResource( 42 )
custom_styles/normal = SubResource( 42 )
text = "asd"
clear_button_enabled = true

[node name="AnimTween" type="Tween" parent="."]

[node name="QueryEditor" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 456.0
margin_bottom = -136.0
rect_min_size = Vector2( 1920, 460 )
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="QueryEditor"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 488.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="QueryEditor/Background"]
modulate = Color( 0.101961, 0.670588, 1, 0.121569 )
material = SubResource( 47 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra" type="Panel" parent="QueryEditor/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 48 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 49 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra2" type="Panel" parent="QueryEditor/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 48 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 50 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="QueryEditor/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 7 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LineEdit" type="TextEdit" parent="QueryEditor/Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1700.0
margin_bottom = 368.0
custom_colors/selection_color = Color( 0.603922, 0.870588, 1, 0.0392157 )
custom_colors/font_color_selected = Color( 0.603922, 0.870588, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 35 )
custom_styles/focus = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "is(aws_alb) and ctime<\"-7d\" and backends==[] with(empty, <-- is(aws_alb_target_group) and target_type==\"instance\" and ctime<\"-7d\" with(empty, <-- is(aws_ec2_instance) and instance_status!=\"terminated\")) <-[0:1]- is(aws_alb_target_group) and target_type==\"instance\" and ctime<\"-7d\""
syntax_highlighting = true
wrap_enabled = true
script = ExtResource( 2 )

[node name="QueryLabel" type="Label" parent="QueryEditor/Background"]
material = SubResource( 43 )
margin_left = 12.0
margin_top = -40.0
margin_right = 1692.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 55 )
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 44 )
text = "Current Query"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SendQueryButton" parent="." instance=ExtResource( 6 )]
margin_left = 104.0
margin_top = 960.0
margin_right = 512.0
margin_bottom = 1008.0

[node name="ButtonLabel" parent="SendQueryButton/CenterContainer" index="0"]
margin_left = 135.0
margin_top = 10.0
margin_right = 272.0
margin_bottom = 38.0
text = "Send query"

[node name="EditQueryButton" parent="." instance=ExtResource( 6 )]
margin_left = 1412.0
margin_top = 960.0
margin_right = 1820.0
margin_bottom = 1008.0

[node name="ButtonLabel" parent="EditQueryButton/CenterContainer" index="0"]
margin_left = 65.0
margin_top = 10.0
margin_right = 343.0
margin_bottom = 38.0
text = "Switch to Query Editor"

[node name="QueryCost" type="ToolButton" parent="."]
margin_left = 528.0
margin_top = 960.0
margin_right = 936.0
margin_bottom = 1008.0
rect_pivot_offset = Vector2( 2464, 752 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="QueryCost"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra" type="Panel" parent="QueryCost/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 160, 22 )
mouse_filter = 2
custom_styles/panel = SubResource( 52 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="HBoxContainer" parent="QueryCost"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 696, 24 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="Label" parent="QueryCost/CenterContainer"]
material = SubResource( 53 )
margin_right = 150.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 92, 16 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 55 )
text = "Query Cost"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="QueryCost/CenterContainer"]
margin_left = 170.0
margin_right = 408.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="ProgressBar" type="ProgressBar" parent="QueryCost/CenterContainer/MarginContainer"]
margin_top = 5.0
margin_right = 233.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 56 )
custom_styles/bg = SubResource( 57 )
value = 35.0
percent_visible = false

[connection signal="text_changed" from="EditContainer/Background/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="mouse_entered" from="QueryCost" to="QueryCost" method="_on_GenericButton_mouse_entered"]
[connection signal="mouse_exited" from="QueryCost" to="QueryCost" method="_on_GenericButton_mouse_exited"]

[editable path="SendQueryButton"]
[editable path="EditQueryButton"]
